test/parallel/forall/task-private/tpv-3-yield-in-forall.chpl
// Implementing this case is a TODO.
// For now, expect a "currently not implemented" error.

var AAA: [1..100] int;

forall aaa in AAA with (var xxx = 5) do
  writeln(aaa,xxx);
